--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:20, minZoom:1
-        }).fitBounds([[-26.3212239021293,-48.8391021742073],[-26.312755020488677,-48.826264119538436]]);
+        }).fitBounds([[-26.325795173469412,-48.84480904558557],[-26.308857410188164,-48.81913293624786]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_WazeWorld_0');
-        map.getPane('pane_WazeWorld_0').style.zIndex = 400;
-        var layer_WazeWorld_0 = L.tileLayer('https://worldtiles3.waze.com/tiles/{z}/{x}/{y}.png', {
-            pane: 'pane_WazeWorld_0',
+        map.createPane('pane_OpenStreetMap_0');
+        map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
+        var layer_OpenStreetMap_0 = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            pane: 'pane_OpenStreetMap_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
             maxZoom: 20,
             minNativeZoom: 0,
-            maxNativeZoom: 20
+            maxNativeZoom: 19
         });
-        layer_WazeWorld_0;
-        map.addLayer(layer_WazeWorld_0);
+        layer_OpenStreetMap_0;
+        map.addLayer(layer_OpenStreetMap_0);
         function pop_Domiciliar_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
@@ -5642,7 +5642,6 @@
             sel_OPERACAO.innerHTML = OPERACAO_options_str;
             div_OPERACAO.appendChild(sel_OPERACAO);
             var lab_OPERACAO = document.createElement('div');
-            lab_OPERACAO.innerHTML = 'OPERACAO';
             lab_OPERACAO.className = 'filterlabel';
             div_OPERACAO.appendChild(lab_OPERACAO);
             var reset_OPERACAO = document.createElement('div');
