inclusão de icone

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         </style>
         <title>Consulta de setores</title>
+        <link rel="shortcut icon" type="image/jpg" href="icon.ico"/>
         
     </head>
     <body>
@@ -36,8 +37,8 @@
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="js/tailDT.js"></script>
-<script src="js/nouislider.min.js"></script>
-<script src="js/wNumb.js"></script>
+        <script src="js/nouislider.min.js"></script>
+        <script src="js/wNumb.js"></script>
         <script src="data/Mesclado_1.js"></script>
         <script>
         var map = L.map('map', {
