barra de pesquisa expanded

--- a/index.html
+++ b/index.html
@@ -5315,7 +5315,7 @@
         // }).addTo(map);
         var googleGeocoder = new L.Control.Geocoder({
             geocoder: L.Control.Geocoder.google('AIzaSyCiKpZmnL9TQXOJd9Qbzw2agE9kxnTGZ38', {}),
-            collapsed: true,
+            collapsed: false,
             position: 'topleft',
             text: 'Search',
             title: 'Testing'
