--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             }
         }
         var map = L.map('map', {
-            zoomControl:true, maxZoom:20, minZoom:1
+            zoomControl:false, maxZoom:20, minZoom:1
         }).fitBounds([[-29.422027658597855,-52.73308837520174],[-24.429996763370056,-43.139968763288074]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/AlyssonKrombauer/localizador_ru" target="_blank">Alysson Krombauer</a> &middot; <a href="https://ambiental.sc/" title="Ambiental.sc">Ambiental.sc</a> &middot;');
