--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
         <link rel="stylesheet" href="css/filter.css">
-<link rel="stylesheet" href="css/nouislider.min.css">
+        <link rel="stylesheet" href="css/nouislider.min.css">
         <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
         <style>
         html, body, #map {
@@ -46,8 +46,8 @@
             width: 265px;
           }
         </style>
-        <title></title>
-    </head>
+        <title>Consulta de setores</title>
+        <link rel="shortcut icon" type="image/jpg" href="icon.ico"/>    </head>
     <body>
         <div id="container">
             <div id="infoDiv"></div>
@@ -91,8 +91,7 @@
             zoomControl:true, maxZoom:20, minZoom:1
         }).fitBounds([[-26.391648548641612,-48.96161060497412],[-26.235647583165743,-48.685594628008495]]);
         var hash = new L.Hash(map);
-        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        map.attributionControl.setPrefix(' <a href="https://github.com/AlyssonKrombauer" title="Ambiental Limpeza Urbana e Saneamento Ltda">Alysson Krombauer</a> &middot;<a href="https://ambiental.sc/" target="_blank">Ambiental.sc</a> &middot;');        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         function removeEmptyRowsFromPopupContent(content, feature) {
          var tempDiv = document.createElement('div');
          tempDiv.innerHTML = content;
