--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
          <title>Consulta de setores</title>
          <link rel="shortcut icon" type="image/jpg" href="icon.ico"/>    </head>    </head>
      <body>
-         <div id="container">
+         <!-- <div id="container">
              <div id="infoDiv"></div>
              <div id="infoDiv2"></div>
-         </div>
+         </div> -->
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
