--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             height: 100%;
             padding: 0;
             margin: 0;
-        }        #streetViewContainer {
+        }        
+        #streetViewContainer {
             position: absolute;
             bottom: 10px; /* Ajuste conforme necessário */
             left: 10px; /* Ajuste conforme necessário */
