--- a/index.html
+++ b/index.html
@@ -6735,7 +6735,7 @@
         lab_OPERACAO.className = 'filterlabel';
         div_OPERACAO.appendChild(lab_OPERACAO);
         var reset_OPERACAO = document.createElement('div');
-        reset_OPERACAO.innerHTML = 'clear filter';
+        reset_OPERACAO.innerHTML = 'Limpar filtro';
         reset_OPERACAO.className = 'filterlabel';
         reset_OPERACAO.onclick = function () {
             var options = document.getElementById("sel_OPERACAO").options;
