--- a/index.html
+++ b/index.html
@@ -6557,7 +6557,7 @@
             title: 'Testing'
         }).addTo(map);
 
-        var searchInput = document.querySelector('.leaflet-control-geocoder-form input[type=text]');
+        var searchInput = document.querySelector('.leaflet-control-geocoder-form input[type=search]');
         searchInput.addEventListener('keydown', function (event) {
             if (event.key === 'Enter') {
                 event.preventDefault();
