--- a/index.html
+++ b/index.html
@@ -6557,26 +6557,26 @@
             title: 'Testing'
         }).addTo(map);
 
-        var searchInput = document.querySelector('.leaflet-control-geocoder-form input[type=search]');
-        searchInput.addEventListener('keydown', function (event) {
-            if (event.key === 'Enter') {
-                event.preventDefault();
-                var query = searchInput.value;
-                googleGeocoder.options.geocoder.geocode(query, function (results) {
-                    if (results && results.length > 0) {
-                        var result = results[0];
-                        map.setView(result.center, 13);
-                        if (googleGeocoder._marker) {
-                            map.removeLayer(googleGeocoder._marker);
-                        }
-                        googleGeocoder._marker = L.marker(result.center).addTo(map).bindPopup(result
-                            .name).openPopup();
-                    } else {
-                        alert('Nenhum resultado encontrado');
-                    }
-                });
-            }
-        });
+        // var searchInput = document.querySelector('.leaflet-control-geocoder-form input[type=search]');
+        // searchInput.addEventListener('keydown', function (event) {
+        //     if (event.key === 'Enter') {
+        //         event.preventDefault();
+        //         var query = searchInput.value;
+        //         googleGeocoder.options.geocoder.geocode(query, function (results) {
+        //             if (results && results.length > 0) {
+        //                 var result = results[0];
+        //                 map.setView(result.center, 13);
+        //                 if (googleGeocoder._marker) {
+        //                     map.removeLayer(googleGeocoder._marker);
+        //                 }
+        //                 googleGeocoder._marker = L.marker(result.center).addTo(map).bindPopup(result
+        //                     .name).openPopup();
+        //             } else {
+        //                 alert('Nenhum resultado encontrado');
+        //             }
+        //         });
+        //     }
+        // });
 
         googleGeocoder.on('markgeocode', function (e) {
             var address = e.geocode.name;
