--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             padding: 10px;
             /* Espaçamento interno */
             border-radius: 5px;
-            /* Borda arredondada */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             /* Sombra suave */
         }
@@ -67,6 +66,14 @@
     <script src="data/Volumosos_1.js"></script>
     <script src="data/Domiciliar_2.js"></script>
     <script src="data/Seletiva_3.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJ6K26BC57"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-MJ6K26BC57');
+    </script>
     <script>
         var highlightLayer;
 
