--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-MJ6K26BC57');
+    gtag('config', 'G-JB94PX2JPN');
     </script>
     <script>
         var highlightLayer;
