--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <script src="data/Volumosos_1.js"></script>
     <script src="data/Domiciliar_2.js"></script>
     <script src="data/Seletiva_3.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJ6K26BC57"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB94PX2JPN"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
