--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         </style>
-        <title></title>
+        <title>Consulta de setores</title>
+        <link rel="shortcut icon" type="image/jpg" href="icon.ico" />
     </head>
     <body>
         <div id="streetViewContainer"></div>
